Fix icons contrast

--- a/client/src/app/toolbar/color-selection/abs-color-button/abs-color-button.component.scss
+++ b/client/src/app/toolbar/color-selection/abs-color-button/abs-color-button.component.scss
@@ -30,6 +30,10 @@
   border: #262626 solid 1px;
 }
 
+.icon {
+  mix-blend-mode: exclusion;
+}
+
 .rgba-wrapper {
   width: 100%;
   display: block;
